# modules_multiboot

./: CMakeLists.txt  EFIDroid.ini  EFIDroidDependencies.ini  LicenseExceptions.txt  file_contexts  main.c
include/: common.h  safe.h  util.h
include/lib/: dmcrypt.h  dynfilefs.h  efivars.h  log.h  sefbinparser.h  sefsrcparser.h  uevent.h
lib/: dmcrypt.c  efivars.c  log.c  sefbinparser.c  sefsrcparser.c  sepolicy-inject.c  uevent.c
lib/android/bionic/: mntentex.c
lib/android/cutils/: android_reboot.c  klog.c
lib/android/fs_mgr/: fs_mgr.c  fs_mgr_fstab.c  fs_mgr_priv.h  fs_mgr_search.c  fs_mgr_slotselect.c
lib/android/fs_mgr/include/lib/: fs_mgr.h
lib/android/include/lib/: android_reboot.h  cmdline.h  klog.h  mntentex.h  mounts.h
lib/android/init/: cmdline.c
lib/android/recovery/: mounts.c
lib/dynfilefs/: dyfslib.c  dynfilefs.c
lib/hookmgr/: hookmgr.c  hookmgr_io.c  hookmgr_mount.c  hookmgr_priv.h  hookmgr_test.c
lib/hookmgr/include/lib/: hookmgr.h
lib/lk/cksum/: crc32.c
lib/lk/include/lib/: cksum.h  list.h
src/: boot_android.c  boot_recovery.c  main.c  multiboot_init.c  safe.c  state.c  util.c
src/syscalls/: init.c  syscalls.c  syscalls_private.h  utils.c
